--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<!-- <script src="descriptors-getters-setters.js"></script> -->
 	<!-- <script src="call-apply_1.js"></script> -->
 	<!-- <script src="call-apply_2.js"></script> -->
+	<!-- <script src="learn-json_1.js"></script> -->
+	<!-- <script src="learn-json_2.js"></script> -->
+	<!-- <script src="settimeout-setinterval_1.js"></script> -->
+	<!-- <script src="settimeout-setinterval_2.js"></script> -->
+	<!-- <script src="settimeout-setinterval_3.js"></script> -->
+	<!-- <script src="settimeout-setinterval_4.js"></script> -->
+	<!-- <script src="settimeout-setinterval_5.js"></script> -->
 </head>
 <body>
 	
