--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- <script src="settimeout-setinterval_3.js"></script> -->
 	<!-- <script src="settimeout-setinterval_4.js"></script> -->
 	<!-- <script src="settimeout-setinterval_5.js"></script> -->
-	<!-- <script src="settimeout-setinterval_5.js"></script> -->
+	<!-- <script src="OOP_1.js"></script> -->
 </head>
 <body>
 	
