--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>learn.javascript.ru</title>
     <!-- <script src="taskSlack_1.js"></script> -->
-    <script src="taskSlack_2.js"></script>
+    <!-- <script src="taskSlack_2.js"></script> -->
     <!-- <script src="numbers_1.js"></script> -->
     <!-- <script src="string_1.js"></script> -->
     <!-- <script src="string_2.js"></script> -->
@@ -20,6 +20,20 @@
     <!-- <script src="array_6.js"></script> -->
     <!-- <script src="array_7.js"></script> -->
     <!-- <script src="array_8.js"></script> -->
+    <!-- <script src="array-iteration_1.js"></script> -->
+    <!-- <script src="array-iteration_2.js"></script> -->
+    <!-- <script src="arguments-pseudoarray_1.js"></script> -->
+    <!-- <script src="arguments-pseudoarray_2.js"></script> -->
+    <!-- <script src="datetime_1.js"></script> -->
+    <!-- <script src="datetime_2.js"></script> -->
+    <!-- <script src="datetime_3.js"></script> -->
+    <!-- <script src="datetime_4.js"></script> -->
+    <!-- <script src="datetime_5.js"></script> -->
+    <!-- <script src="datetime_6.js"></script> -->
+    <!-- <script src="datetime_7.js"></script> -->
+    <!-- <script src="datetime_8.js"></script> -->
+
+
     <!-- <script src="static-properties-and-methods.js"></script> -->
     <!-- <script src="descriptors-getters-setters.js"></script> -->
     <!-- <script src="call-apply_1.js"></script> -->
