--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- <script src="js/array-methods_8.js"></script> -->
   <!-- <script src="js/array-methods_9.js"></script> -->
   <!-- <script src="js/array-methods_10.js"></script> -->
-  <script src="js/array-methods_11.js"></script>
+  <!-- <script src="js/array-methods_11.js"></script> -->
 
 
   <!-- <script src="js/static-properties-and-methods.js"></script> -->
