--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <!-- <script src="js/array-methods_9.js"></script> -->
   <!-- <script src="js/array-methods_10.js"></script> -->
   <!-- <script src="js/array-methods_11.js"></script> -->
+  <!-- <script src="js/array-methods_12.js"></script> -->
 
 
   <!-- <script src="js/static-properties-and-methods.js"></script> -->
