--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>learn.javascript.ru</title>
+  <script src="js/test.js"></script>
   <!-- <script src="js/taskSlack_1.js"></script> -->
   <!-- <script src="js/taskSlack_2.js"></script> -->
   <!-- <script src="js/numbers_1.js"></script> -->
@@ -43,7 +44,12 @@
   <!-- <script src="js/array-methods_9.js"></script> -->
   <!-- <script src="js/array-methods_10.js"></script> -->
   <!-- <script src="js/array-methods_11.js"></script> -->
-  <!-- <script src="js/array-methods_12.js"></script> -->
+  <!-- <script src="js/closures-usage_1.js"></script> -->
+  <!-- <script src="js/closures-usage_2.js"></script> -->
+  <!-- <script src="js/closures-usage_3.js"></script> -->
+  <!-- <script src="js/closures-usage_4.js"></script> -->
+  <!-- <script src="js/closures-usage_5.js"></script> -->
+  <!-- <script src="js/closures-usage_6.js"></script> -->
 
 
   <!-- <script src="js/static-properties-and-methods.js"></script> -->
