--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>learn.javascript.ru</title>
-  <script src="js/test.js"></script>
   <!-- <script src="js/taskSlack_1.js"></script> -->
   <!-- <script src="js/taskSlack_2.js"></script> -->
   <!-- <script src="js/numbers_1.js"></script> -->
   <!-- <script src="js/string_1.js"></script> -->
   <!-- <script src="js/string_2.js"></script> -->
+  <!-- <script src="js/recourse_1.js"></script> -->
   <!-- <script src="js/object-for-in_1.js"></script> -->
   <!-- <script src="js/object-for-in_2.js"></script> -->
   <!-- <script src="js/object-for-in_3.js"></script> -->
@@ -50,6 +50,9 @@
   <!-- <script src="js/closures-usage_4.js"></script> -->
   <!-- <script src="js/closures-usage_5.js"></script> -->
   <!-- <script src="js/closures-usage_6.js"></script> -->
+  <!-- <script src="js/object-methods_1.js"></script> -->
+  <!-- <script src="js/object-methods_2.js"></script> -->
+  <!-- <script src="js/object-conversion_1.js"></script> -->
 
 
   <!-- <script src="js/static-properties-and-methods.js"></script> -->
@@ -65,6 +68,9 @@
   <!-- <script src="js/settimeout-setinterval_5.js"></script> -->
   <!-- <script src="js/OOP_1.js"></script> -->
   <!-- <script src="js/OOP_2.js"></script> -->
+  <!-- <script src="js/objectDeepEqual.js"></script> -->
+  <!-- <script src="js/o_arrSplice.js"></script> -->
+  <!-- <script src="js/test.js"></script> -->
 </head>
 
 <body>
