--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
   <!-- <script src="js/object-methods_1.js"></script> -->
   <!-- <script src="js/object-methods_2.js"></script> -->
   <!-- <script src="js/object-conversion_1.js"></script> -->
+  <!-- <script src="js/constructor-new_1.js"></script> -->
+  <!-- <script src="js/constructor-new_2.js"></script> -->
+  <!-- <script src="js/constructor-new_3.js"></script> -->
+  <!-- <script src="js/descriptors-getters-setters.js"></script> -->
 
 
   <!-- <script src="js/static-properties-and-methods.js"></script> -->
-  <!-- <script src="js/descriptors-getters-setters.js"></script> -->
   <!-- <script src="js/call-apply_1.js"></script> -->
   <!-- <script src="js/call-apply_2.js"></script> -->
   <!-- <script src="js/learn-json_1.js"></script> -->
@@ -70,7 +73,7 @@
   <!-- <script src="js/OOP_2.js"></script> -->
   <!-- <script src="js/objectDeepEqual.js"></script> -->
   <!-- <script src="js/o_arrSplice.js"></script> -->
-  <!-- <script src="js/test.js"></script> -->
+  <script src="js/test.js"></script>
 </head>
 
 <body>
