--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
   <!-- <script src="js/constructor-new_2.js"></script> -->
   <!-- <script src="js/constructor-new_3.js"></script> -->
   <!-- <script src="js/descriptors-getters-setters.js"></script> -->
-
-
   <!-- <script src="js/static-properties-and-methods.js"></script> -->
   <!-- <script src="js/call-apply_1.js"></script> -->
   <!-- <script src="js/call-apply_2.js"></script> -->
+  <!-- <script src="js/bind_1.js"></script> -->
+  <!-- <script src="js/bind_2.js"></script> -->
+
   <!-- <script src="js/learn-json_1.js"></script> -->
   <!-- <script src="js/learn-json_2.js"></script> -->
   <!-- <script src="js/settimeout-setinterval_1.js"></script> -->
@@ -69,6 +70,11 @@
   <!-- <script src="js/settimeout-setinterval_3.js"></script> -->
   <!-- <script src="js/settimeout-setinterval_4.js"></script> -->
   <!-- <script src="js/settimeout-setinterval_5.js"></script> -->
+  <!-- <script src="js/native-prototypes_1.js"></script> -->
+  <!-- <script src="js/native-prototypes_2.js"></script> -->
+
+
+
   <!-- <script src="js/OOP_1.js"></script> -->
   <!-- <script src="js/OOP_2.js"></script> -->
   <!-- <script src="js/objectDeepEqual.js"></script> -->
